indicator-application (0.2.0-0ubuntu4~ppa4) UNRELEASED; urgency=low

  * Upstream merge
    * Make a policy for migrating the mono bindings

 -- Ted Gould <ted@ubuntu.com>  Fri, 18 Jun 2010 14:50:44 -0500

indicator-application (0.2.0-0ubuntu4~ppa3) lucid; urgency=low

  * Upstream merge
    * Fix icon updating (LP: #594199)

 -- Ted Gould <ted@ubuntu.com>  Fri, 18 Jun 2010 11:22:06 -0500

indicator-application (0.2.0-0ubuntu4~ppa2) lucid; urgency=low

  * Upstream Merge
    * Change Mono bindings to only parse particular files (LP: #592706)
  * Autogen.  For fun and profit.

 -- Ted Gould <ted@ubuntu.com>  Fri, 18 Jun 2010 08:46:44 -0500

indicator-application (0.2.0-0ubuntu4~ppa1) lucid; urgency=low

  * Upstream Merge
    * Test fixes to make them more reliable

 -- Ted Gould <ted@ubuntu.com>  Thu, 17 Jun 2010 13:27:26 -0500

indicator-application (0.2.0-0ubuntu3) UNRELEASED; urgency=low

  * renamed cil binary to libappindicator0.1 to match the assembly 
    version (LP: #592706)

 -- Ken VanDine <ken.vandine@canonical.com>  Fri, 11 Jun 2010 10:56:46 -0400

indicator-application (0.2.0-0ubuntu2) maverick; urgency=low

  * Renamed the gir binary to gir1.0-appindicator-0.1 to match the typelib

 -- Sebastien Bacher <seb128@ubuntu.com>  Tue, 08 Jun 2010 11:01:04 +0200

indicator-application (0.2.0-0ubuntu1) maverick; urgency=low

  * New upstream release.
    * Unref the child that was created
    * Build GIR and VAPI files (LP: #510610)
    * Fixes to documentation and enum construction
    * Fix distcheck
    * Merging patch to add assembly information to Mono
      binding (LP: #547195)
  * debian/control: Add GObject Introspection and Vala build
    dependencies.
  * Added debian/gir1.0-libappindicator-0.1.install and modified
    debian/control and debian/libappindicator-dev.install to handle
    the VAPI and GI files.
  * debian/libappindicator0.0-cil.install: Fixing directory of cli files 

 -- Ted Gould <ted@ubuntu.com>  Thu, 03 Jun 2010 14:49:48 -0500
