@@ -1,1 +1,2 @@
 /usr/lib/cli/appindicator-sharp-0.1/appindicator-sharp.dll
+/usr/lib/cli/appindicator-sharp-0.1/policy.0.1.appindicator-sharp.dll
